<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:id="@+id/rowOne">


        <TextView
            android:id="@+id/resultTextView"
            android:layout_height="match_parent"
            android:text=""
            android:maxLines="3"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:gravity="right|center_vertical"
            android:layout_weight="5" />

        <Button
            android:text="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clearButton"
            android:minWidth="24dip"
            android:layout_gravity="center_vertical"
            android:onClick="handleClearButtonClicked"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/rowTwo">

        <Button
            android:text="@string/seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/sevenButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="handleNumericButtonClick" />

        <Button
            android:text="@string/eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/eightButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="handleNumericButtonClick" />

        <Button
            android:text="@string/nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/nineButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="handleNumericButtonClick" />

        <Button
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/plusButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="handleArithmeticButtonClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/rowThree">

        <Button
            android:text="@string/four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/fourButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="handleNumericButtonClick" />

        <Button
            android:text="@string/five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/fiveButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="handleNumericButtonClick" />

        <Button
            android:text="@string/six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/sixButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="handleNumericButtonClick" />

        <Button
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/minusButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="handleArithmeticButtonClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/rowFour">


        <Button
            android:text="@string/one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/oneButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="handleNumericButtonClick" />

        <Button
            android:text="@string/two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/twoButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="handleNumericButtonClick" />

        <Button
            android:text="@string/three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/threeButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="handleNumericButtonClick" />

        <Button
            android:text="@string/multiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/multiplyButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="handleArithmeticButtonClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/rowFive">


        <Button
            android:text="@string/dot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/dotButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:onClick="handleNumericButtonClick" />

        <Button
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/zerroButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="handleNumericButtonClick" />

        <Button
            android:text="@string/equal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/equalButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:onClick="handleEqualsButtonClicked" />

        <Button
            android:text="@string/devide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/devideButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="handleArithmeticButtonClick" />
    </LinearLayout>

</LinearLayout>
